# easypot

./: .dockerignore  HANDOFF.md  RUNBOOK.md  RUNBOOK_fidelity.md  cowrie_out.txt  fidelity_detail.md  fidelity_hybrid.md  fidelity_hybrid_detail.md  fidelity_table.md  ground_truth.txt  pyproject.toml  report.md  report_docker.md
deploy/: Dockerfile  README.md  docker-compose.yml
deploy/collector/: Dockerfile  collect.py
honeyshell/: __main__.py  analyze.py  replay_cowrie.py
honeyshell/backends/: __init__.py  cache.py  client.py  content_fetcher.py  fs_applier.py  llm_command.py  prompt_builder.py  resolver.py
honeyshell/commands/: __init__.py  base.py  context.py  registry.py  streams.py
honeyshell/core/: __init__.py  config.py  event_bus.py  events.py
honeyshell/data/: fs.json
honeyshell/fs/: __init__.py  build_sample_fs.py  filesystem.py  import_cowrie.py  loader.py
honeyshell/memory/: __init__.py  pruner.py  (+1 more)
tests/: test_analyze.py  test_awk.py  test_backends.py  test_cmdsubst.py  test_commands.py  test_completion.py  test_core.py  test_download_content.py  test_downloads.py  test_fd_redirect.py  test_fidelity_calibration.py  test_fileproc.py  test_fs.py  test_fs_applier.py  test_interpreter.py  test_main_cli.py  test_memory.py  test_ollama_integration.py  test_parser.py  test_priv.py  test_recon.py  test_replay_cowrie.py  test_shell_builtin.py  test_shell_lang.py  test_ssh_integration.py  test_transport.py
tools/: capture_cowrie.py  capture_ground_truth.sh  fidelity_judge.py  ground_truth.txt  probes.py  run_probes.py  test_fidelity_judge.py
(+86 files in other folders)
